--- a/http/webroot/index.html
+++ b/http/webroot/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="loader.js"></script>
-    <script src="jquery.min.js"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <script type="text/javascript" src="loader.js"></script>
+    <script  type="text/javascript" src="jquery.min.js"></script>
     <script type="text/javascript">
 
         let timeType = "minute";
